--- a/pom.xml
+++ b/pom.xml
@@ -29,14 +29,24 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.sun.jersey</groupId>
+            <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
-            <version>1.18.2</version>
+            <version>2.11</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.jersey.contribs</groupId>
-            <artifactId>jersey-multipart</artifactId>
-            <version>1.18.2</version>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>2.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.12</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
@@ -56,7 +66,7 @@
         <dependency>
             <groupId>org.mule.tools.devkit</groupId>
             <artifactId>connector-testing-framework</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>0.9.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
