--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.mule.modules</groupId>
     <artifactId>slack-connector</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>mule-module</packaging>
     <name>Mule Slack Anypoint Connector</name>
 
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.mule.tools.devkit</groupId>
         <artifactId>mule-devkit-parent</artifactId>
-        <version>3.6.1</version>
+        <version>3.7.0-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -106,7 +106,7 @@
         <dependency>
             <groupId>org.mule.tools.devkit</groupId>
             <artifactId>connector-testing-framework</artifactId>
-            <version>0.9.0</version>
+            <version>0.9.2-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
