--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,15 @@
                     </relocations>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
 
             <!-- Other plugins -->
         </plugins>
@@ -68,7 +77,7 @@
 
     <profiles>
         <profile>
-            <id>functionalTestingOutputDir</id>
+            <id>functional-testing-output-dir</id>
             <build>
                 <directory>${project.basedir}/target/functionalTesting</directory>
             </build>
