* Added test case for UploadFile * Added exclussion for Client Model * Deleted unused SlackRequest class

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
         <licensePath>LICENSE.md</licensePath>
         <devkit.studio.package.skip>false</devkit.studio.package.skip>
         <jersey-client.version>2.11</jersey-client.version>
+        <sonar.exclusions>
+            **/client/model/**/*
+        </sonar.exclusions>
     </properties>
 
 
