--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,9 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+.classpath
+.factorypath
+.project
 *.iml
 .idea/
+.apt_generated/
